--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 .heading{
     display: flex;
     border: 1px solid black;
-    justify-content:space-around;
+    justify-content:space-between;
     width:  100%;
     height: 100px;
 }
@@ -25,38 +25,71 @@ body {
     border: 1px solid black;
     width:  100vw;
     height: 85vh;
+    flex-wrap: wrap;
+
 }
 
 .sidebar{
     display: flex;
     border: 1px solid green;
     width: 10%;
+    overflow: hidden;
+    flex-wrap: wrap;
+    align-items: flex-start;
 
 }
 
-.overview{
+/* .overview{
     display: flex;
     border: 1px solid rgb(248, 50, 0);
     width: 90%;
-}
+} */
 
-#pname, #searchbar{
+.head {
     display: flex;
-    border: 1px solid rgb(248, 50, 0);
-    align-items: center;
-}
-
-.rheading {
-    display: flex;
-    border: 1px solid rgb(248, 50, 0);
-    align-items: center;
+    border: 1px solid rgb(22, 238, 94);
     justify-content: center;
-    padding: 10px;
+    align-items: center;
+}
+
+
+.head > div{
+    margin-right: 20px;
+    border: 1px solid rgb(255, 3, 104);
+}
+
+#searchbar {
+    margin-left: 300px;
+}
+
+#pname {
+    margin-left: 50px;
+}
+
+#bellsymbol, #pimg {
+    margin-right: 50px;
+}
+
+#lang {
+    margin-right: 50px;
+}
+
+
+#sidehead{
+    display: flex;
+    border: 1px solid rgb(255, 3, 104);
+    height: 1.5rem;
+    width: 100%;
+    justify-content: center;
 
 
 
 }
 
-.rheadingel{
-    margin-right: 20px;
+.sites{
+    display: row;
+    border: 1px solid rgb(18, 213, 15);
+    width: 100%;
+    height: 100%;
+    justify-content: center;
 }
