--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 .heading{
     display: flex;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     justify-content:space-between;
     width:  100%;
     height: 100px;
@@ -22,7 +22,7 @@ body {
 
 .pagebody{
     display: flex;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width:  100vw;
     height: 85vh;
     flex-wrap: wrap;
@@ -31,9 +31,8 @@ body {
 
 .sidebar{
     display: flex;
-    border: 1px solid green;
+    /* border: 1px solid rgb(0, 0, 0); */
     width: 10%;
-    overflow: hidden;
     flex-wrap: wrap;
     align-items: flex-start;
 
@@ -47,7 +46,7 @@ body {
 
 .head {
     display: flex;
-    border: 1px solid rgb(22, 238, 94);
+    /* border: 1px solid rgb(22, 238, 94); */
     justify-content: center;
     align-items: center;
 }
@@ -55,7 +54,7 @@ body {
 
 .head > div{
     margin-right: 20px;
-    border: 1px solid rgb(255, 3, 104);
+    /* border: 1px solid rgb(255, 3, 104); */
 }
 
 #searchbar {
@@ -76,20 +75,38 @@ body {
 
 
 #sidehead{
+    /* border: 1px solid rgb(2, 199, 87); */
     display: flex;
-    border: 1px solid rgb(255, 3, 104);
-    height: 1.5rem;
+    height: 10%;
     width: 100%;
     justify-content: center;
+}
 
+.sites{
+    display: flex;
+    /* border: 1px solid rgb(221, 67, 25); */
+    width: 100%;
+    height: 90%;
+    justify-content: center;
+    align-items: center;
 
 
 }
 
-.sites{
-    display: row;
-    border: 1px solid rgb(18, 213, 15);
+
+.abc{
+    /* border: 1px solid rgb(3, 0, 207); */
+    display: flex;
     width: 100%;
-    height: 100%;
-    justify-content: center;
+    height: 70%;
+    align-items: center ;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+#test{
+    /* border: 1px solid rgb(251, 0, 0); */
+    width: 70%;
 }
