--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 .heading{
     display: flex;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     justify-content:space-between;
     width:  100%;
     height: 100px;
@@ -31,18 +31,14 @@ body {
 
 .sidebar{
     display: flex;
-    /* border: 1px solid rgb(0, 0, 0); */
+    border: 1px solid rgb(0, 0, 0);
     width: 10%;
     flex-wrap: wrap;
     align-items: flex-start;
 
 }
 
-/* .overview{
-    display: flex;
-    border: 1px solid rgb(248, 50, 0);
-    width: 90%;
-} */
+
 
 .head {
     display: flex;
@@ -77,7 +73,7 @@ body {
 #sidehead{
     /* border: 1px solid rgb(2, 199, 87); */
     display: flex;
-    height: 10%;
+    height: 5%;
     width: 100%;
     justify-content: center;
 }
@@ -87,10 +83,7 @@ body {
     /* border: 1px solid rgb(221, 67, 25); */
     width: 100%;
     height: 90%;
-    justify-content: center;
-    align-items: center;
-
-
+    justify-content: flex-start;
 }
 
 
@@ -98,15 +91,29 @@ body {
     /* border: 1px solid rgb(3, 0, 207); */
     display: flex;
     width: 100%;
-    height: 70%;
-    align-items: center ;
     justify-content: space-around;
-    align-items: center;
     flex-direction: column;
+    margin-left: 10px;
 }
 
 
 #test{
-    /* border: 1px solid rgb(251, 0, 0); */
+    border: 1px solid rgb(21, 41, 199);
     width: 70%;
+}
+
+.overview{
+    display: grid;
+    border: 1px solid rgb(248, 50, 0);
+    width: 85%;
+    padding: 20px;
+    grid-template-rows: repeat(autofit, calc(100%/4));
+    grid-template-columns: repeat(4, calc(100%/4));
+    gap: 2rem;
+}
+
+
+
+.overview > div {
+    border: 1px solid brown;
 }
